Terminados testes de Cliente, melhorados outros testes